# AijoRender

./: .gitignore  CMakeLists.txt  README.md  main.cpp
core/: Scene.cpp  Scene.h  camera.cpp  camera.h  macro.h  maths.cpp  maths.h  model.cpp  model.h  pipeline.cpp  pipeline.h  renderbuffer.cpp  renderbuffer.h
platform/: win32.h
shader/: phong_shader.cpp  shader.h
